show text before JS loaded

--- a/template.html
+++ b/template.html
@@ -3,7 +3,7 @@
 <h2>{{ filename }}</h2>
 {% for x in data %}
 <blockquote class="twitter-tweet" lang="ja">
-<a href="{{ x.url }}"></a>
+{{ x.text }}<a href="{{ x.url }}"></a>
 </blockquote>
 score: {{ x.score }}
 <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
